# project-code

./: .gitattributes
board-code/: .clangformat  .gitignore  CMakeLists.txt  README.md
board-code/inc/rededa/board/: board_c.h  board_cpp.h  common.h  error.h  iboard.h  version.h
board-code/inc/rededa/board/common/: common.h
board-code/inc/rededa/board/loader/: pcb_loader.h  pkg_loader.h
board-code/scripts/: build.py  dist.py  lcov.py
board-code/src/: CMakeLists.txt  board.cpp  board.h  board_assemble.cpp  board_assemble.h  board_c.cpp  board_controller.cpp  board_controller.h  board_controller_log.h  board_dao.cpp  board_dao.h  board_data.h  version.h.in
board-code/src/loader/: pcb_loader.cpp  pkg_loader..cpp
board-code/test/: CMakeLists.txt  board_test.cpp  common.h  test_assemble.cpp  test_callback.cpp  test_common.cpp  test_dao.cpp  test_designer.cpp  test_loader.cpp
board-code/test/data/: testDAO.redpcb  test_save_pcb.redpcb  test_save_pcb_1.redpcb  test_save_pkg.redpkg  test_save_pkg_1.redpkg
settings-code/: .gitignore  CMakeLists.txt
settings-code/inc/rededa/settings/: common.h  error.h  i_settings.h  i_settings_dao.h  i_settings_dao_factory.h  i_settings_observer.h  settings_c.h  settings_controller.h  settings_data.h  settings_read.h  version.h
settings-code/src/: CMakeLists.txt  settings.cpp  settings.h  settings_c.cpp  settings_concrete_observe.h  settings_controller.cpp  settings_db_dao.cpp  settings_db_dao.h  settings_db_dao_factory.cpp  settings_db_dao_factory.h  settings_display.h  settings_file_dao.cpp  settings_file_dao.h  settings_file_dao_factory.cpp  settings_file_dao_factory.h  settings_general.h  settings_keyvalue.h  settings_node.cpp  settings_node.h  settings_read.cpp  settings_system.h  settings_system_general.h  settings_system_library.h  settings_text.h  settings_tool.cpp  settings_tool.h  version.h.in
settings-code/src/data/settings/: settings_redpcb.json  settings_redpkg.json  settings_userpreferences.json  userpreferences.json
settings-code/test/: CMakeLists.txt  test_load.json  test_save.json  test_settings.cpp
tools/: tools.md
